# medical_decision_support_assistant_v1_crewai-project

./: .gitignore  README.md  database.py  main.py  medical_assistant.db  next.config.js  package-lock.json  package.json  pdf_generator.py  pyproject.toml  rag.py  requirements.txt  tailwind.config.js
.next/: trace
.next/cache/webpack/client-development/: index.pack.gz.old
.next/cache/webpack/server-development/: index.pack.gz.old
.next/server/: _error.js  server-reference-manifest.json  webpack-runtime.js
.next/server/app/: page.js  page_client-reference-manifest.js
.next/server/pages/: _error.js
.next/server/vendor-chunks/: @babel.js  @swc.js  clsx.js  d3-array.js  d3-color.js  d3-format.js  d3-interpolate.js  d3-path.js  d3-scale.js  d3-shape.js  d3-time-format.js  d3-time.js  decimal.js-light.js  eventemitter3.js  fast-equals.js  internmap.js  lodash.js  lucide-react.js  next.js  object-assign.js  prop-types.js  react-is.js  react-smooth.js  react-transition-group.js  recharts-scale.js  recharts.js  tiny-invariant.js  victory-vendor.js
.next/static/chunks/: _error.js  app-pages-internals.js  webpack.js
.next/static/chunks/app/: layout.js
.next/static/css/app/: layout.css
.next/static/development/: _buildManifest.js
.next/static/webpack/: webpack.fe55be34aa49db9f.hot-update.js
.next/static/webpack/app/: layout.fe55be34aa49db9f.hot-update.js
.next/types/app/: layout.ts  page.ts
