[project]
name = "medical_decision_support_assistant"
version = "0.1.0"
description = "medical_decision_support_assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[file-processing,litellm,tools]==1.15.0",
    "exa-py",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "sqlalchemy>=2.0.31",
    "pypdf>=4.2.0",
    "reportlab>=4.2.0",
    "sentence-transformers>=3.0.1",
    "faiss-cpu>=1.8.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
]

[project.scripts]
medical_decision_support_assistant = "medical_decision_support_assistant.main:run"
run_crew = "medical_decision_support_assistant.main:run"
train = "medical_decision_support_assistant.main:train"
replay = "medical_decision_support_assistant.main:replay"
test = "medical_decision_support_assistant.main:test"
run_with_trigger = "medical_decision_support_assistant.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv]
override-dependencies = ["litellm<=1.82.6"]
